# moodbar

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  meson.build  meson_options.txt
analyzer/: Makefile.am  Makefile.in  main.c
m4/: Makefile.in
plugin/: Makefile.am  Makefile.in  gstfftwspectrum.c  gstfftwunspectrum.c  gstfftwunspectrum.h  gstmoodbar.c  gstspectrumeq.c  gstspectrumeq.h  spectrum.c  spectrum.h
